--- a/css/task17-css.css
+++ b/css/task17-css.css
@@ -1,6 +1,7 @@
 .aqi-chart-wrap{
     position: relative;
-    width: 600px;
-    height: 300px;
+    width: 1200px;
+    height: 600px;
+    left: auto;
     /*background-color: red;*/
 }
