--- a/css/task5-从头开始重写.css
+++ b/css/task5-从头开始重写.css
@@ -3,8 +3,9 @@ body {
     border: 0;
     padding: 0;
     font-family: Microsoft YaHei;
-    min-width: 700px;
+    min-width: 750px;
     background: #DEDEDE;
+    font-size: 14px;
 }
 header {
     width: 100%;
@@ -14,6 +15,7 @@ header {
 }
 header img {
     height: 100%;
+    background-image: linear-gradient(red yellow);
 }
 header nav {
     float: right;
@@ -35,13 +37,134 @@ header nav li a{
 header nav li a:hover{
     color: lightgrey;
 }
-/*nav ul{
-  float: right;
-  margin: 0px;
-  padding: 0px;
+main {
+    margin: 30px 480px 30px 30px;
+    padding: 0;
+    /*outline: 2px solid red;*/
 }
-nav ul li{
-  line-height: 70px;
-  float: left;
-  margin-right: 20px;
-}*/
+article {
+    padding: 15px;
+    line-height: 1.5;
+    margin-bottom: 30px;
+    background-color: #fff;
+    box-shadow: 2px 2px 2px #848484;
+}
+.color-grey {
+    color: grey;
+}
+.text-indent {
+    text-indent: 2em;
+}
+figure {
+    display: inline-block;
+    height: 120px;
+    width: 140px;
+    border: 1px solid #aaa;
+    text-align: center;
+}
+figure img {
+    width: 85%;
+    height: 65%;
+}
+figure figcaption {
+    padding: 5px;
+}
+table {
+    width: 100%;
+    text-align: left;
+    /*border: 1px solid #ccc;*/
+    border-collapse:collapse;
+}
+th {
+    color: white;
+    background-color: #333;
+    border: 1px solid #ccc;
+    padding-left: 5px;
+}
+td {
+    border: 1px solid #ccc;
+    padding-left: 5px;
+}
+tfoot {
+    background-color: grey;
+}
+aside {
+    width: 420px;
+    /*height: 500px;*/
+    float: right;
+    margin: 30px;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 2px 2px 2px #848484;
+    box-sizing: border-box;
+}
+aside h2 {
+    padding-left: 10px;
+    border-left: 3px #ccc solid;
+}
+.form-area {
+    width: 100%;
+    border: thin dotted #7e7e7e;
+    background-color: #e1ceb8;
+    box-sizing: border-box;
+}
+form {
+    width: 95%;
+    display: table;
+    margin: 0 auto;
+    padding: 10px 10px 0 10px;
+    /*outline: 2px solid red;*/
+}
+.tableRow {
+    display: table-row;
+    width: 100%;
+    /*outline: 2px solid red;*/
+}
+.tableRow p {
+    display: table-cell;
+    padding: 5px;
+    vertical-align: top;
+    /*outline: 2px solid red;*/
+}
+.tableRow p:first-child {
+    text-align: right;
+    width: 35%;
+}
+.tableRow p:nth-child(2) {
+    text-align: left;
+    width: 85%;
+}
+.note {
+    font-size: 10px;
+    color: grey;
+}
+textarea {
+    width: 100%;
+    height: 100px;
+    resize: none;
+}
+.submit {
+    width: 95%;
+    margin: 0 auto 10px;
+    /*outline: 2px solid red;*/
+}
+input[type='submit'] {
+    width: 100%;
+    height: 40px;
+    background: #3355D0;
+    color: #fff;
+    cursor: pointer;
+    border-radius: 8px;
+    border:1px solid #3355D0;
+    font-weight: 800;
+}
+footer {
+    width: 100%;
+    height: 60px;
+    line-height: 60px;
+    text-align: center;
+    background: #000;
+    color: #fff;
+    font-weight: 500;
+    font-size: 14px;    
+}
