--- a/css/task26.css
+++ b/css/task26.css
@@ -93,11 +93,11 @@ div[class^='ship'] {
     transform-origin: 20px -220px;
 }
 div[class^='ship'] .power {
-    position: absolute;
+    /*position: absolute;*/
     width: 100%;
     height: 100%;
-    top: 0;
-    left: 0;
+    /*top: 0;
+    left: 0;*/
     background-color: green;
     display: flex;
     justify-content: center;
@@ -121,7 +121,7 @@ div[class^='ship'] span {
     position: relative;
 }
 .list {
-    width: 25%;
+    width: 29%;
     height: 100%;
     position: absolute;
     top: 0;
@@ -130,7 +130,7 @@ div[class^='ship'] span {
     border-left: 1px solid #ccc;
     box-shadow: -2px 0px 2px lightgrey;
     padding: 10px;
-    font-size: 17px;
+    font-size: 14px;
     overflow: auto;
 }
 div[class^='control'] {
