--- a/css/task26.css
+++ b/css/task26.css
@@ -13,7 +13,8 @@ body {
 .universe {
     width: 100%;
     height: 600px;
-    background-color: black;
+    /*background-color: #000033;*/
+    background-image: linear-gradient(45deg, #000033, #660000);
     position: relative;
     /*display: flex;
     justify-content: center;
@@ -29,14 +30,51 @@ body {
     width: 150px;
     height: 150px;
     border-radius: 50%;
-    background-color: blue;
+    background-color: #0088A8;
+    background-image: linear-gradient(#FFCC00, #CD6600);
     position: relative;
+    overflow: hidden;
+}
+.planet [class^='hole'] {
+    position: absolute;
+    border-radius: 50%;
+    background-color: #CC6633;
+}
+.hole1 {
+    width: 20px;
+    height: 20px;
+    top: 60%;
+    left: 20%;
+}
+.hole2 {
+    width: 15px;
+    height: 15px;
+    top: 20%;
+    left: 30%;
+}
+.hole3 {
+    width: 20px;
+    height: 20px;
+    top: 60%;
+    left: 90%;
+}
+.hole4 {
+    width: 20px;
+    height: 20px;
+    top: 8%;
+    left: 80%;
+}
+.hole5 {
+    width: 15px;
+    height: 20px;
+    top: 95%;
+    left: 45%;
 }
 div[class^='path'] {
     /*width: 250px;
     height: 250px;*/
     border-radius: 50%;
-    border: 1px dashed #fff;
+    border: 0.6px solid #666666;
     /*z-index: 5;*/
 }
 .path-1 {
@@ -114,7 +152,7 @@ div[class^='ship'] span {
 .command {
     width: 950px;
     height: 200px;
-    margin: 20px auto;
+    margin: 40px auto;
     border: 1px solid black;
     box-sizing: border-box;
     padding: 15px;
@@ -152,11 +190,23 @@ button {
     margin-bottom: 10px;
     width: 150px;
 }*/
-button:hover {
+.hover {
     background-color: lightgrey;
     cursor: pointer;
     outline: none;
 }
 button:focus {
     outline: none;
+}
+stars {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+star {
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
 }
